--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -114,9 +114,6 @@ column-gap: 1rem;
       flex-direction: row;
       justify-content: space-around;
     }
-    .drawer-opener{
-      display: none;
-    }
 }
 
 .Divider{
@@ -138,4 +135,19 @@ column-gap: 1rem;
   /* border: 1px solid red; */
   /* border-bottom: 1px solid whitesmoke; */
   justify-content: flex-start;
+}
+.example{
+  width: 40vw;
+  max-width: 250px;
+}
+.drawerOpener{
+  width: 40vw;
+}
+.nav_link{
+  padding: 5px;
+  border-radius: 4px;
+}
+.nav_link:hover{
+  background-color: #084a55;
+  color: #bb8f37;
 }
