--- a/frontend/src/components/Homepage/homes.css
+++ b/frontend/src/components/Homepage/homes.css
@@ -1,114 +1,127 @@
-.center{
-    width: 100%;
-    height: auto;
+.Homepage{
+    /* height: 100vh; */
+    margin-top: 50px;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
-.img{
-    margin-left: 20%;
-    margin-right: 0;
-    height: 50px;
-    width: 50px;
+.Homepage .left{
+    box-sizing:border-box;
+    width: 30%;
+    min-height: 100vh;
+    padding: 30px 10px;
+    background-color: #efefef;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.h{
-    color:#414BF4;
+.Homepage .left h3{
+    font-size: 1.2rem;
+    font-weight: 300;
+    letter-spacing: 1.5px;
 }
-.username{
-    font-size: 18px;
-    color: black;
+.Homepage .right{
+    width: 70%;
+    height: 100%;
+}
+.location{
+    margin: 20px 0px;
+    border-color: black;
+}
+.location:focus{
+    border-color: green;
+    outline-color: green;
+}
+.Homepage .left .button1{
+    color: white;
+    background-color: #fd7e14;
+    box-shadow: #fd7e14;
+}
+.Homepage .left .button1 img{
     margin-left: 5px;
 }
-.profile{
-    font-size: 9px;
+.Homepage .left .button2{
+    color: #fd7e14;
+    border-color: #fd7e14;
 }
-.homelogo{
-    margin-top: 40px;
-    display: flex;
-    gap:10px;
-    margin-left: 20%;
-}
-.name{
-    color: rgb(10, 9, 9);
-}
-.upper{
-    margin-left:-500px;
-    margin-top: 20px;
-    left:10px;
-}
-.wel{
-    font-size: 2rem;
-    font-weight: 600;
-    margin-left:-550px ;
-}
-.session{
-    font-size: 1rem;
-    font-weight: 500;
-    margin-left: -170px;
-    margin-top: -4px;
-}
-.mid{
-    top: 409px;
-    left: 300px;
-    margin-left: 20px;
-    margin-top: 20px;
-    padding: 28px, 6px, 16px, 15px;
-    border-radius: 8px;
-    padding-left: 2px;;
-}
-.ses{
-    margin-left: -307px;
-    color: #585858;
-    font-weight: 100;
-    font-size: .8rem;
 
+.Homepage .left .location, .Homepage .left .btn{
+    width: 70%;
 }
-.button{
-    border:2px solid #76885B;
-    max-width: 190px;
-    padding: 10px;
-    padding-right: 19px;
-    margin-left: 15px;
-    margin-top: 40px;
-    padding-top: 10px;
-    background-color: #76885B;
-    color: white;
-    border-radius: .4rem;
+
+.button-container{
+    min-height: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
-.vector{
-    padding-left: 140px;
-    padding-top: -210px;
-    margin-top: -17px;
+.right{
+    padding: 2rem 3rem;
 }
-.datas{
-    margin-top: 10px;
-    margin-left: -40px;
-    font-size: .8rem;
-}
-.nam{ 
-    color:#000000;
-    size: 18px;
+.right-details h1{
+    font-size: 40px;
     font-weight: 600;
-    gap:4px;
 }
-.last{
-    margin-top: 50px;
-}
-.head{
-    margin-left: -400px;
-    font-size: 23px;
-}
-.connect{
-    font-size: 23px;
-}
-.donor{
-    max-width: 190px;
-    margin-left: 30px;
+
+.profiles-container{
     margin-top: 20px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px 1px grey;
-}
-.all{
-    height: auto;
     display: grid;
-    padding: 5px 50px;
-    grid-template-columns: auto auto auto auto;
     grid-gap: 20px;
+}
+.profile{
+    margin: 0px 10px;
+    padding: 10px;
+    border: 0.2px solid #fd7e14;
+    border-radius: 7px;
+    display: grid;
+    grid-template-columns: 120px auto;
+}
+.profile-img img{
+    width: 120px;
+}
+.profile-details{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.donor-details{
+    padding-left: 7px;
+}
+.donor-details p, .donor-details div{
+    margin-bottom: 2px;
+}
+.donor-name{
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+.donor-address{
+    font-weight: 400;
+    font-size: 1.1rem;
+}
+.donor-age{
+    font-size: 0.8rem;
+    font-weight: 600;
+    color: gray;
+}
+.donor-address img, .donor-address p{
+    display: inline;
+    font-size: 0.8rem;
+    color: gray;
+}
+.donor-address img{
+    margin-right: 2px;
+    height: 12px;
+}
+.tags-contact{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.tags-contact .tags{
+    padding: 1rem;
+}
+.tag{
+    margin-left: 3px;
 }
