--- a/frontend/src/components/footer.css
+++ b/frontend/src/components/footer.css
@@ -107,3 +107,9 @@
   justify-content: center;
   align-items: center;
 }
+
+.site-footer > div > .container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
