--- a/frontend/src/components/Homepage/homes.css
+++ b/frontend/src/components/Homepage/homes.css
@@ -126,7 +126,15 @@
 .tag{
     margin-left: 3px;
 }
-.select_upper>*{
+.select_upper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.select-btn{
     width: 100%;
+}
+.select_upper>*{
+    width: 70%;
     margin: 6px 0px;
 }
